# boxlite

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: build-node.yml
boxlite/: Cargo.toml
boxlite-cli/: Cargo.toml  README.md  build.rs
boxlite-cli/src/: cli.rs  formatter.rs  main.rs
boxlite-cli/src/commands/: create.rs  images.rs  list.rs  mod.rs  rm.rs  run.rs
boxlite-cli/tests/: create.rs  images.rs  list.rs  rm.rs  run.rs
boxlite-cli/tests/common/: mod.rs
boxlite-shared/src/: constants.rs  layout.rs  lib.rs
boxlite/src/: lib.rs
boxlite/src/controller/: shim.rs  spawn.rs
boxlite/src/db/: boxes.rs
boxlite/src/disk/: qcow2.rs
boxlite/src/fs/: mod.rs
boxlite/src/images/: config.rs  index.rs  manager.rs  mod.rs  storage.rs  store.rs
boxlite/src/jailer/: bwrap.rs  command.rs  mod.rs
boxlite/src/litebox/: box_impl.rs  config.rs  exec.rs  lifecycle.rs  manager.rs  mod.rs
boxlite/src/net/: constants.rs
boxlite/src/runtime/: constants.rs  core.rs  layout.rs  mod.rs  options.rs  rt_impl.rs  types.rs
boxlite/src/util/: binary_finder.rs  mod.rs
boxlite/src/vmm/: mod.rs
boxlite/src/volumes/: block_device.rs  container_volume.rs  guest_volume.rs  (+1 more)
boxlite/tests/: lifecycle.rs
docs/: faq.md
docs/development/: cli.md
docs/getting-started/: README.md
docs/guides/: README.md
docs/reference/: README.md
examples/c/: shutdown.c
examples/node/: shutdown.js
examples/python/: README.md  clawboxlite.py  cross_process_example.py  interactivebox_example.py  list_boxes_example.py  native_example.py  shutdown_example.py  skillbox_example.py  sync_native_example.py
guest/src/: main.rs
scripts/setup/: setup-macos.sh
sdks/node/: package.json
sdks/python/: README.md  pyproject.toml
(+73 files in other folders)
