[package]
name = "boxlite-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for BoxLite container runtime"

[[bin]]
name = "boxlite"
path = "src/main.rs"

[dependencies]
boxlite = { path = "../boxlite" }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "macros", "signal"] }
futures = "0.3"
term_size = "0.3"
nix = { version = "0.30.1", features = ["term", "signal"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Runtime extraction
dirs = "6.0"
comfy-table = "7.2.1"

[build-dependencies]
dirs = "6.0"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.24.0"
